📚 Update profile picture and summary

--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -2,7 +2,7 @@ name: "Benito Palacios Sanchez"
 nickname: "Benito"
 
 greeting: "Without any further delay, "
-image: "images/author/palben.jpg"
+image: "images/author/palben.webp"
 
 contactInfo:
   email: "me@pleonex.dev"
